# zero-to-production-rust

./: .env  .gitignore  Cargo.toml  Makefile  docker-compose.yml
.github/workflows/: general.yml
migrations/: create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
