[package]
name = "zero2production"
version = "0.1.0"
edition = "2023"
authors = ["Subhrajit Makur <makur_dot_subhrajit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path="src/lib.rs"
name="zero2production"



[dependencies]
actix-web = "4"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"]  }



[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
