[package]
name = "zero2production"
version = "0.1.0"
edition = "2021"
authors = ["Subhrajit Makur <makur_dot_subhrajit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "4"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.171", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11.17"
